--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
     <title>Rouks Blog</title>
 </head>
 <header>
 
       <nav class="navbar navbar-expand-md navbar-dark bg-black-custom" aria-label="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand bold-custom text-yellow-custom" href="/">Rouks Blog 🐤</a>
+          <a class="navbar-brand bold-custom text-yellow-custom ms-3" href="/">Rouks Blog 🐤</a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,16 +23,16 @@
             <div class="d-flex flex-md-row flex-column flex-grow-1 justify-content-md-end align-items-md-center">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">All posts</a>
+                  <a class="nav-link" href="/all-posts">All posts</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Create new post</a>
+                  <a class="nav-link" href="/create">Create new post</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About me</a>
+                  <a class="nav-link" href="/about">About me</a>
                 </li>
               </ul>
-              <form role="search" class="mt-2 mt-md-0 ms-md-3">
+              <form role="search" class="mt-2 mt-md-0 ms-md-3 me-3">
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search">
               </form>
             </div>
@@ -39,4 +42,4 @@
         </div>
       </nav>
   </header>
-  <main>
+  <main class="content flex-grow-1">
