--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,24 @@
 <%- include("partials/header.ejs") %>
 
+<div class="about-me">
+    <div class="container content d-flex justify-content-center align-items-center about-me">
+        <div class="col-md-12 col-lg-12 mx-auto">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+                    <div class="post-type all-post-page-img">
+                        <img class="all-post-page-img" src="/media/kitten-placeholder.png" alt="image post">
+                    </div>
+                </div>
+                <div class="d-flex col-xs-12 col-sm-6 col-md-8 col-lg-9 justify-content-center align-items-center">
+                    <div class="caption">
+                        <h1 class="weight-300">Hey there, I'm Diana and welcome to my Blog!</h1>
+                        <p class="text-secondary"> Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur blandit magna sit amet euismod tincidunt. Quisque a rhoncus tellus, non volutpat elit. Nullam cursus turpis ut tincidunt mollis. Nulla facilisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at augue libero.</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <%- include("partials/footer.ejs") %>
