--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
   <!-- your code here -->
 </footer>
 <div>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 mt-4 bg-black-custom text-white-50">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 bg-black-custom text-white-50">
       <div class="col-md-4 d-flex align-items-center">
         <span class="mb-3 ms-4 mb-md-0">© 2025, Made By Roukorjerte</span>
       </div>
@@ -38,6 +38,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
         crossorigin="anonymous">
     </script>
+    
 </body>
 
 </html>
