--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,9 +32,9 @@
                   <a class="nav-link" href="/about">About me</a>
                 </li>
               </ul>
-              <form role="search" class="mt-2 mt-md-0 ms-md-3 me-3">
+              <!-- <form role="search" class="mt-2 mt-md-0 ms-md-3 me-3">
                 <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-              </form>
+              </form> -->
             </div>
           </div>
           
