--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "Lexend Deca", serif;
+    font-family: "Lexend Deca", sans-serif;
 }
 
 .bg-black-custom{
@@ -79,6 +79,13 @@ body{
     object-position: center;
 }
 
+.individual-article-img{
+    width: 100%;
+    height: 550px;
+    object-fit: cover;
+    object-position: center;
+}
+
 @media (max-width: 1200px) and (min-width: 992px) {
     .all-post-page-img{
         width: 200px; 
@@ -111,6 +118,9 @@ body{
         width: 250px; 
         height: 250px;
     }
+    .individual-article-img{
+        height: 350px;
+    }
 }
 
 /* extra small screens */
@@ -121,6 +131,9 @@ body{
     }
     .all-post-page-img{
         width: 100%; 
+        height: 250px;
+    }
+    .individual-article-img{
         height: 250px;
     }
 }
@@ -151,7 +164,7 @@ main.content {
     overflow: auto;
 }
 
-/* .create-post-text-field{
+.create-post-text-field{
     height: 50vh;
 }
 
@@ -163,4 +176,31 @@ main.content {
 
 .form-control{
     position: relative;
-} */
+}
+
+.about-me{
+    height: 100%;
+    width: 100%;
+    background-color: #F4F0F8;
+}
+
+.weight-300{
+    font-weight: 300;
+}
+
+.all-posts-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 5; 
+    -webkit-box-orient: vertical;
+    overflow: hidden; 
+    text-overflow: ellipsis;
+}
+
+
+.all-posts-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+}
