--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,11 @@
                     <img src="/media/black-cat-placeholder.jpg" alt="" class="featured-posts-img mb-3" />
                     <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
                     <p class="text-secondary">This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-                    <button type="button" class="btn btn-warning">
+                    <a href="/">
+                      <button type="button" class="btn btn-warning" >
                         Read More >
-                    </button>
+                      </button>
+                    </a>
                 </div>
             </div>
 
@@ -45,10 +47,10 @@
                         </a>
                       </li>
                       <li>
-                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+                        <a class="break-word d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
                           <img class="bd-placeholder-img all-posts-img" src="/media/persian-cat-placeholder.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></img>
-                          <div class="col-lg-8 break-word">
-                            <h6 class="mb-0">This is another blog post title</h6>
+                          <div class="col-lg-8">
+                            <h6 class="mb-0 ">This is another blog post title</h6>
                             <small class="timestamp">January 14, 2024</small>
                           </div>
                         </a>
