--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,15 +21,12 @@
     
           <div class="collapse navbar-collapse" id="navbarsExample04">
             <div class="d-flex flex-md-row flex-column flex-grow-1 justify-content-md-end align-items-md-center">
-              <ul class="navbar-nav">
+              <ul class="navbar-nav me-2">
                 <li class="nav-item">
                   <a class="nav-link" href="/all-posts">All posts</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/create">Create new post</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/about">About me</a>
                 </li>
               </ul>
               <!-- <form role="search" class="mt-2 mt-md-0 ms-md-3 me-3">
