--- a/views/create.ejs
+++ b/views/create.ejs
@@ -2,29 +2,25 @@
     <div class="container mt-5 flex-grow-1 overflow-auto content">
         <div class="col-12 col-lg-7 mx-auto">
             <h4 class="mb-3">Create new blog post</h4>
-            <form class="needs-validation" action="/link" method="post" enctype="multipart/form-data">
+            
+            <form class="needs-validation" action="/articles" method="post" enctype="multipart/form-data">
               <div class="row g-3">
-
                 <div class="col-12">
                   <label for="post-title" class="form-label">Post title</label>
-                  <input type="text" class="form-control" id="post-title" placeholder="Enter your title here..." required="">
-                  <div class="invalid-feedback">
-                    Please enter a valid title
-                  </div>
+                  <input type="text" class="form-control" name="post-title" id="post-title" required>
                 </div>
-                
+            
                 <div class="col-12">
                   <label for="post-text" class="form-label">Post text</label>
-                  <textarea type="text" class="form-control create-post-text-field" style="height: 45vh" id="post-text" placeholder="Enter your text here..." required=""></textarea>
-                  <div class="invalid-feedback">
-                    Please enter your post text.
-                  </div>
+                  <textarea class="form-control" name="post-text" id="post-text" style="height: 45vh" required></textarea>
                 </div>
-
-                <input class="form-control" type="file" id="post-image" accept="image/png, image/jpeg">
-
-              <button class="w-100 btn btn-warning btn-lg" type="submit">Continue to checkout</button>
+            
+                <input class="form-control" type="file" name="post-image" id="post-image" accept="image/png, image/jpeg" required>
+            
+                <button class="w-100 btn btn-warning btn-lg" type="submit">Publish</button>
+              </div>
             </form>
+   
           </div>
     </div>
 <%- include("partials/footer.ejs") %>
