--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,9 @@
               This is a blog I made with bootstrap and my custom css. To make this web-site beautiful and to pick harmonical colours, I used "Client-First Template 12 - Blog" from Figma community. This is my first project with backend.
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="/create">
               <button type="button" class="btn btn-warning btn-lg px-4 gap-3 mb-5">Create new post</button>
+            </a>
           </div>
       </div>
     </div>
