--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,9 +1,28 @@
 <%- include("partials/header.ejs") %>
 
-<div class="container mt-5 content">
-    <div class="col-12 col-lg-8 mx-auto">
-        <h1 class="mb-2"><%= article.title %></h1>
-        <P class="timestamp mb-4"><%= article.timestamp %></P>
+<div class="container mt-4 content">
+    <h1 class="mb-2"><%= article.title %></h1>
+    <div class="d-flex flex-wrap">
+        <div class="col-12 mx-auto mb-2">
+            <div class="d-flex flex-wrap justify-content-end align-items-center">
+                <P class="timestamp flex-grow-1"><%= article.timestamp %></P>
+                <a id="delete">
+                    <button class="btn btn-warning btn-sm mb-2 me-2 delete-button" data-bs-toggle="modal" data-bs-target="#exampleModal" data-id="<%= article.id %>">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                        </svg>
+                    </button>
+                </a>
+                <a id="edit" href="/edit/<%= article.id %>">
+                    <button class="btn btn-warning btn-sm mb-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                        </svg>
+                    </button>
+                </a>
+            </div>
+        </div>
         <img src="<%= article.image %>" class="individual-article-img mb-4" alt="<%= article.title %>">
         <p><%= article.text %></p>
         <a href="/">
@@ -12,6 +31,28 @@
             </button>
         </a>
     </div>
+
+    <!-- Модальное окно -->
+    <!-- Модальное окно -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Attention!</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure that you want to delete this article?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-warning" id="deletePost">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <%- include("partials/footer.ejs") %>
+
